--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 .navbar {
   gap: 30%;
   height: 60px;
-  background-color:aliceblue;
+  background-color:whitesmoke;
 }
 
 .navbar-menu {
