--- a/src/App.css
+++ b/src/App.css
@@ -110,3 +110,35 @@ body {
 .about-me p {
   width: 60%;
 }
+
+
+/* TECH STACK */
+
+.stack-menu {
+  gap: 15px;
+  background-color: whitesmoke;
+  padding: 10px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+
+.stack-menu a{
+  font-size: 120%;
+  width: 120px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.active {
+  background-color: rgb(190, 93, 255);
+  color: white;
+}
+
+.notactive{
+  background-color: white;
+}
+
+.tech-stack img{
+  width: 50px;
+}
