--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,14 @@ body {
 
 /* TECH STACK */
 
+.stack-wrap p{
+  width: 60%;
+  text-align: center;
+  margin: 0;
+}
+
 .stack-menu {
+  margin-top: 2%;
   gap: 15px;
   background-color: whitesmoke;
   padding: 10px;
