--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
-body {
+html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   font-style: normal;
+  width: 100vw;
 }
 
 /* NAVBAR */
@@ -12,6 +13,9 @@ body {
   gap: 30%;
   height: 60px;
   background-color:whitesmoke;
+  position: sticky;
+  top:0;
+  z-index: 10;
 }
 
 .navbar-menu {
@@ -132,6 +136,7 @@ body {
 
 .about-me p {
   width: 60%;
+  text-align: center;
 }
 
 
@@ -184,8 +189,12 @@ body {
 
 .card{
   margin: 10px;
-  text-align: center;
 }
+
+.card p {
+  width: 100% !important;
+}
+
 
 .card img{
   width: 100px;
@@ -212,8 +221,10 @@ body {
 }
 
 .slideshow-container {
+  z-index: 1;
   position: relative;
-  width: 100%;
+  left: 10%;
+  width: 80%;
   height: 600px;
   overflow: hidden;
 }
@@ -273,7 +284,6 @@ body {
 
 .slideshow-info p{
   width: 100% !important;
-  
 }
 
 .tag {
@@ -298,5 +308,17 @@ body {
 
 .contact-wrap > * {
   margin-bottom: 5%;
+}
+
+
+/* FOOTER */
+.footer span {
+  font-weight: 500;
+
+}
+
+.footer {
+  background-color:rgb(210, 210, 210);
+  text-align: center;
 }
 
